// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <ClinicalNotesDetailForm /> should renders correctly when form is submitted 1`] = `
<div
  className="panel-body-inner"
>
  <form
    className="form"
    name="clinicalNotesPanelForm"
  >
    <div
      className="form-group-wrapper"
    >
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="clinicalNotesType"
            label="Type"
            name="clinicalNotesType"
            placeholder=""
            props={
              Object {
                "isSubmit": true,
              }
            }
            type="text"
          />
          <Field
            component={[Function]}
            id="note"
            label="Note"
            name="note"
            props={
              Object {
                "isSubmit": true,
              }
            }
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="author"
            label="Author"
            name="author"
            props={
              Object {
                "disabled": true,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="currentDate"
            label="Date"
            name="currentDate"
            props={
              Object {
                "disabled": true,
                "format": "DD-MMM-YYYY",
                "value": 1507020019000,
              }
            }
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Component <ClinicalNotesDetailForm /> should renders with props correctly 1`] = `
<div
  className="panel-body-inner"
>
  <form
    className="form"
    name="clinicalNotesPanelForm"
  >
    <div
      className="form-group-wrapper"
    >
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="clinicalNotesType"
            label="Type"
            name="clinicalNotesType"
            placeholder=""
            props={
              Object {
                "isSubmit": false,
              }
            }
            type="text"
          />
          <Field
            component={[Function]}
            id="note"
            label="Note"
            name="note"
            props={
              Object {
                "isSubmit": false,
              }
            }
          />
        </div>
      </div>
      <div
        className="row-expand"
      >
        <div
          className="col-expand-left"
        >
          <Field
            component={[Function]}
            id="author"
            label="Author"
            name="author"
            props={
              Object {
                "disabled": true,
              }
            }
          />
        </div>
        <div
          className="col-expand-right"
        >
          <Field
            component={[Function]}
            id="currentDate"
            label="Date"
            name="currentDate"
            props={
              Object {
                "disabled": true,
                "format": "DD-MMM-YYYY",
                "value": 1507020019000,
              }
            }
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;
